/*
 * $Id: ChangeLog,v 1.5247 2006/11/18 21:37:35 oh1 Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-11-18 16:39 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/vm/classes.c
    ! Fixed: All DELEGATE messages were sent to the first "delegated"
      object.

2006-11-18 22:40 UTC+0100 Henryk Olkowski <oh1@op.pl>
  * source/ct/getinfo.prg
  * contrib/mysql/tmysql.prg
  ! fixed subscript check: ">= 0" ==> ">= 1"

2006-11-17 08:30 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/rtl/tget.prg
    - Commented initialization of :ExitState in :New() in Clipper it's NIL

  * source/rtl/transfrm.c
    * Missing type cast

2006-11-15 10:55 UTC+0100 Miguel Angel Marchuet <miguelangel/at/marchuet.net>
  * source\rtl\filesys.c
    ! minor fix. condition for FO_TEMPORARY

2006-11-14 09:30 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source\rtl\achoice.prg
    * minor fix for page-down and page-up movements, Clipper's achoice
      is buggy. Suggested by Ken Wantz.

2006-11-14 10:42 UTC+0100 Miguel Angel Marchuet <miguelangel/at/marchuet.net>
  * include/fileio.ch
  * source\rdd\bmdbfcdx\bmdbfcdx.c
  * source\rdd\dbfcdx\dbfcdx.c
  * source\rtl\filesys.c
    + Added flag FC_TEMPORARY to give to support to the creation of real
      temporary files under platform Windows. That whenever possible the
      system will maintain them in buffer. Other platforms are not proven.

      FILE_ATTRIBUTE_TEMPORARY:

      A file is being used for temporary storage. File systems avoid writing data
      back to mass storage if sufficient cache memory is available, because an
      application deletes a temporary file after a handle is closed. In that case, the system
      can entirely avoid writing the data. Otherwise, the data is written after the handle is closed.
