@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.5247 2006/11/18 21:37:35 oh1 Exp $
+ * $Id: ChangeLog,v 1.5248 2006/11/18 22:44:05 guerra000 Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2006-11-20 15:59 UTC+0200 Mindaugas Kavaliauskas <dbtopas/at/dbtopas.lt>
+  * contrib/rdd_ads/adsfunc.c
+    ! fixed: AdsDirectory() returns garbage in case of empty directory
 
 2006-11-18 16:39 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
   * source/vm/classes.c
